# forecasting

./: .gitignore  README.md  config.py  pyproject.toml
scripts/: data.py  download_fpp.sh
