[project]
name = "forecasting"
version = "0.1.0"
description = "Time Series Forecasting with Python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.5.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
